--- a/RaceV2/nbproject/project.properties
+++ b/RaceV2/nbproject/project.properties
@@ -1,11 +1,26 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=RaceV2
+application.vendor=EddySantiago
+endorsed.classpath=
 #Thu Jul 20 13:13:37 COT 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
 libs.JOGL.classpath=../opengl/build/cluster/libs/jogl.jar
-run.classpath=${javac.classpath}\:${build.classes.dir}
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 javac.target=1.5
 javadoc.noindex=false
 javadoc.additionalparam=
@@ -18,7 +33,7 @@ natives.platform=windows-amd64
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=org.yourorghere.RaceV2
+main.class=org.yourorghere.Inicio
 dist.jar=${dist.dir}/RaceV2.jar
 javadoc.use=true
 libs.GLUEGEN-RT.classpath=../opengl/build/cluster/libs/gluegen-rt.jar
@@ -33,7 +48,11 @@ junit.selected.version=3
 run-sys-prop.java.library.path=${libs.JOGL.classpath}-natives-${natives.platform}${path.separator}${libs.GLUEGEN-RT.classpath}-natives-${natives.platform}
 debug.classpath=${run.classpath}
 run.jvmargs=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 jar.compress=false
 build.generated.dir=${build.dir}/generated
 javadoc.private=false
@@ -41,7 +60,10 @@ meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-javac.classpath=${libs.GLUEGEN-RT.classpath}\:${libs.JOGL.classpath}
+javac.classpath=\
+    ${libs.GLUEGEN-RT.classpath}:\
+    ${libs.JOGL.classpath}:\
+    ${libs.absolutelayout.classpath}
 application.args=
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
