--- a/RaceV2/nbproject/project.properties
+++ b/RaceV2/nbproject/project.properties
@@ -33,7 +33,7 @@ natives.platform=windows-amd64
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=org.yourorghere.RaceV2
+main.class=org.yourorghere.Inicio
 dist.jar=${dist.dir}/RaceV2.jar
 javadoc.use=true
 libs.GLUEGEN-RT.classpath=../opengl/build/cluster/libs/gluegen-rt.jar
